@@ -10,25 +10,45 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 scenarios(vlt_all => 1);
 
 compile(
-    v_flags2 => ["--trace --output-split 1 --output-split-cfuncs 1"],
+    v_flags2 => ["--trace --output-split 1 --output-split-cfuncs 1 --exe ../$Self->{main_filename}"],
+    verilator_make_gcc => 0,
     );
+
+# We don't use the standard test_regress rules, as want to test the rules
+# properly build
+run(logfile=>"$Self->{obj_dir}/vlt_gcc.log",
+    cmd=>["make",
+          "-C ".$Self->{obj_dir},
+          "-f $Self->{VM_PREFIX}.mk",
+          "-j 4",
+          "VM_PARALLEL_BUILDS=1",  # Important to this test
+          "VM_PREFIX=$Self->{VM_PREFIX}",
+          "TEST_OBJ_DIR=$Self->{obj_dir}",
+          "CPPFLAGS_DRIVER=-D".uc($Self->{name}),
+          ($opt_verbose ? "CPPFLAGS_DRIVER2=-DTEST_VERBOSE=1":""),
+          "OPT_FAST=-O2",
+          "OPT_SLOW=-O0",
+          ($param{make_flags}||""),
+    ]);
 
 execute(
     check_finished => 1,
     );
 
-my $got1;
-foreach my $file (glob("$Self->{obj_dir}/*.cpp")) {
-    $got1 = 1 if $file =~ /__1/;
-    check($file);
+{
+    my $got1;
+    foreach my $file (glob("$Self->{obj_dir}/*.cpp")) {
+        $got1 = 1 if $file =~ /__1/;
+        check_cpp($file);
+    }
+    $got1 or error("No __1 split file found");
 }
-$got1 or error("No __1 split file found");
+check_gcc_flags("$Self->{obj_dir}/vlt_gcc.log");
 
 ok(1);
 1;
 
-
-sub check {
+sub check_cpp {
     my $filename = shift;
     my $size = -s $filename;
     printf "  File %6d  %s\n", $size, $filename if $Self->{verbose};
@@ -51,5 +71,21 @@ sub check {
     }
     if ($#funcs > 0) {
         error("Split had multiple functions in $filename\n\t".join("\n\t",@funcs));
+    }
+}
+
+sub check_gcc_flags {
+    my $filename = shift;
+    my $fh = IO::File->new("<$filename") or error("$! $filenme");
+    while (defined (my $line = $fh->getline)) {
+        chomp $line;
+        if ($line =~ /\.cpp/) {
+            my $filetype = ($line =~ /Slow/) ? "slow":"fast";
+            my $opt = ($line !~ /-O2/) ? "slow":"fast";
+            print "$filetype, $opt, $line\n";
+            if ($filetype ne $opt) {
+                error("${filetype} file compiled as if was ${opt}: $line");
+            }
+        }
     }
 }
