@@ -9,9 +9,9 @@ module t (/*AUTOARG*/
    );
    input clk;
 
-   integer 	cyc=0;
+   integer cyc=0;
 
-   parameter CNT = 10;
+   parameter CNT = 5;
 
    wire [31:0]  w [CNT:0];
 
@@ -33,13 +33,13 @@ module t (/*AUTOARG*/
       else if (cyc<90) begin
       end
       else if (cyc==99) begin
-`define EXPECTED_SUM 32'h123e
+`define EXPECTED_SUM 32'h1239
 `ifdef TEST_VERBOSE
-	 $write("[%0t] cyc==%0d  sum=%x\n",$time, cyc, w[CNT]);
+         $write("[%0t] cyc==%0d  sum=%x\n",$time, cyc, w[CNT]);
 `endif
-	 if (w[CNT] !== `EXPECTED_SUM) $stop;
-	 $write("*-* All Finished *-*\n");
-	 $finish;
+         if (w[CNT] !== `EXPECTED_SUM) $stop;
+         $write("*-* All Finished *-*\n");
+         $finish;
       end
    end
 
